--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,6 +12,8 @@ set(CMAKE_PREFIX_PATH "C:/Qt/6.9.0/mingw_64/lib/cmake")
 
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Sql)
+
 
 set(PROJECT_SOURCES
         main.cpp
@@ -46,6 +48,7 @@ set(PROJECT_SOURCES
         ui/styledmessagebox.h
 )
 
+
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
     qt_add_executable(Blackjack-Symulator
         MANUAL_FINALIZATION
@@ -73,6 +76,7 @@ else()
 endif()
 
 target_link_libraries(Blackjack-Symulator PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+target_link_libraries(Blackjack-Symulator PRIVATE Qt${QT_VERSION_MAJOR}::Sql)
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
 # If you are developing for iOS or macOS you should consider setting an
